--- a/_posts/2023-01-23-blog-post-2.md
+++ b/_posts/2023-01-23-blog-post-2.md
@@ -8,178 +8,316 @@ tags:
   - linear algebra
   - beginner
   - python
+math: true 
 ---
 
 *If you can stack toy blocks, you already have the right intuition for the math that powers today’s AI.*  
-This post unpacks the **four shapes of numbers—scalars, vectors, matrices, and tensors—and the handful of moves we do with them**.  
+This post unpacks the **four shapes of numbers—scalars, vectors, matrices, and tensors—and the handful of moves we do
+with them**.  
 No whiteboard proofs, no scary symbols—just pictures, stories, and runnable code snippets.
+
 
 ---
 
-## Why Even Talk About Math?
+### Why Even Talk About Math?
 
 Every neural network—whether it writes poems or spots cats—boils down to:
 
-1. **Storing numbers** (the model’s *weights*).  
-2. **Shuffling those numbers around** (multiplying, adding, scaling).  
-3. **Measuring how wrong it is** (the *loss*).  
+1. **Storing numbers** (the model’s *weights*).
+2. **Shuffling those numbers around** (multiplying, adding, scaling).
+3. **Measuring how wrong it is** (the *loss*).
 
-The language that describes steps 1 & 2 is **linear algebra**.  
-Learn it once, and every AI explainer video makes ten-times more sense.
-
----
-
-## 1. Meet the Cast
-
-| Everyday object | Math name | Notation | Python shape | Feels like… |
-|-----------------|-----------|----------|--------------|-------------|
-| A single marble | **Scalar** | *a* | `()` | One number (e.g., the learning-rate 0.001) |
-| A row of beads  | **Vector** | **v** | `(n,)` | List of numbers (pixel row, word embed, …) |
-| A chessboard    | **Matrix** | **A** | `(m, n)` | Grid (weights between two layers) |
-| A Rubik’s cube  | **Tensor** | ***T*** | `(*dims)` | Stack of matrices (mini-batch of colour images) |
-
-Picture them as Lego pieces:  
-- A **scalar** is one tiny brick.  
-- Snap several bricks end-to-end → a **vector**.  
-- Arrange rows of vectors → a **matrix** (flat baseplate).  
-- Stack those plates in 3-D → a **tensor**.
-
-> **Key rule**: In NumPy and PyTorch, a matrix’s shape is always **rows × columns**.  
-> A `(2, 3)` weight matrix has **2 rows** and **3 columns**.
+The language that describes steps 1 & 2 is **linear algebra**.
 
 ---
 
-## 2. The Five Everyday Moves
+### 1. Meet the Cast
 
-Think of these like the four arrows on a game controller plus *fire*.
+| Everyday object | Math name  | Notation | Python shape | Feels like…                                     |
+|-----------------|------------|----------|--------------|-------------------------------------------------|
+| A single marble | **Scalar** | *a*      | `()`         | One number (e.g., the learning-rate 0.001)      |
+| A row of beads  | **Vector** | **v**    | `(n,)`       | List of numbers (pixel row, word embed, …)      |
+| A chessboard    | **Matrix** | **A**    | `(m, n)`     | Grid (weights between two layers)               |
+| A Rubik’s cube  | **Tensor** | ***T***  | `(*dims)`    | Stack of matrices (mini-batch of colour images) |
 
-| Move | What you type | Real-world use |
-|------|---------------|---------------|
-| **Add vectors** | `a + b` | Combine two gradients. |
-| **Scale** | `c * v` | Turn “volume” of activations up/down. |
-| **Dot product** | `np.dot(a, b)` | Measure similarity (cos θ) — shows up in attention, loss functions. |
-| **Matrix × vector** | `A @ x` or `np.dot(A, x)` | One whole dense-layer forward pass. |
-| **Matrix × matrix** | `A @ B` | Chain layers or coordinate transforms. |
+#### More Shapes in the Wild
 
-Two more helper buttons:
+- **Scalar**: temperature, learning rate, bias term.
+- **Vector**: word embeddings, pixel brightness row.
+- **Matrix**: grayscale image, dense layer weights.
+- **Tensor**: RGB image, stack of images, video frames.
 
-* **Transpose** `A.T` – flip rows ↔ columns.  
-* **Identity** `np.eye(n)` – “do-nothing” transform; handy for proofs.
-
-> **Nerd note**: We *rarely* take a true matrix inverse in deep learning.  
-> Optimisers (SGD, Adam) dodge that heavy work by iteratively nudging weights.
+> **Visual Metaphor**:
+> - A **scalar** is a single LEGO block.
+> - A **vector** is a line of blocks.
+> - A **matrix** is a flat LEGO baseplate.
+> - A **tensor** is a stack of baseplates—like a LEGO cube tower.
 
 ---
 
-## 3. Watch the Numbers Move (Python Demo)
+### 2. The Five Everyday Moves
 
-Copy-paste this into a fresh notebook; no GPU needed.
+These are the moves you'll do every day when training or using AI models:
+
+| Move                                                                                                                                                               | What you type             | Real-world use                                                                                                                                                                                                                                    |
+|--------------------------------------------------------------------------------------------------------------------------------------------------------------------|---------------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| **Add vectors**                                                                                                                                                    | `a + b`                   | Combine gradients.                                                                                                                                                                                                                                |
+| **Scale**                                                                                                                                                          | `c * v`                   | Turn “volume” up/down.                                                                                                                                                                                                                            |
+| **[Dot product](https://www.khanacademy.org/math/multivariable-calculus/thinking-about-multivariable-function/x786f2022:vectors-and-matrices/a/dot-products-mvc)** | `np.dot(a, b)`            | Similarity, projection (used in attention layers).                                                                                                                                                                                                |
+| **Matrix × vector**                                                                                                                                                | `A @ x` or `np.dot(A, x)` | One [dense-layer](https://medium.com/majordigest/understanding-dense-neural-networks-a-deep-dive-into-architecture-learning-and-applications-1824ce2e850b) [forward pass](https://www.datacamp.com/tutorial/forward-propagation-neural-networks). |
+| **Matrix × matrix**                                                                                                                                                | `A @ B`                   | Chain transformations, stack neural layers.                                                                                                                                                                                                       |
+
+Extras:
+
+- **Transpose** `A.T` — flip rows and columns.
+- **Identity** `np.eye(n)` — acts like a mirror; output = input.
+- **Inverse** `np.linalg.inv(A)` — used in linear regression (rare in deep learning).
+
+---
+
+### 3. Let’s Code the Moves
 
 ```python
 import numpy as np
 
-# --- 1. Shapes ---
-lr   = 0.01                                 # scalar
-x    = np.array([1., 2., 3.])               # vector  (3,)
-W    = np.array([[0.5, -1.2, 0.3],          # matrix  (2, 3)
-                 [1.7,  0.0, 0.8]])
+# Create data
+x = np.array([1., 2., 3.])  # vector
+W = np.array([[0.5, -1.2, 0.3],
+              [1.7, 0.0, 0.8]])  # matrix (2x3)
 
-# --- 2. Moves ---
-y        = W @ x            # matrix–vector product -> (2,)
-similar  = np.dot(x, x)     # dot product          -> 14.0
-outer    = np.outer(x, x)   # makes a (3, 3) matrix
+# Multiply!
+y = W @ x  # matrix-vector product
+dot = np.dot(x, x)  # dot product (self-similarity)
+outer = np.outer(x, x)  # outer product (creates matrix)
 
 print("y =", y)
-print("similarity =", similar)
+print("dot =", dot)
 print("outer shape =", outer.shape)
 ```
 
-Observe:
+Try these edits:
+
+- Make `x` a random vector.
+- Add a bias term.
+- Normalize the vector.
+- Replace `W` with a different shape.
+
+---
+
+### 4. Story Time: A Matrix is a Milkshake Machine
+
+Picture this:
+
+- `x = [1, 0, 1]` → Your order: chocolate and strawberry.
+- `W` has 2 rows = 2 recipes.
+- Multiply `W @ x` → You get 2 milkshakes based on your flavor mix.
+
+Tweak the rows of `W`, and your output (flavor) changes.  
+That’s training. You're updating recipes to match taste.
+
+
+---
+
+### 5. Common Pitfalls to Avoid
+
+Linear algebra may look clean on paper, but in code, it’s easy to slip. Watch for:
+
+| Mistake                         | What Happens                        | Fix                                              |
+|---------------------------------|-------------------------------------|--------------------------------------------------|
+| **Shape mismatch**              | `ValueError: shapes (2,3) and (4,)` | Make sure inner dims match: `(m,n) × (n,)` is OK |
+| **Row vs column confusion**     | Wrong outputs or shape errors       | Use `.reshape(n,1)` or `.T` to clarify intent    |
+| **Broadcasting surprises**      | Silent bugs or weird results        | Always check `.shape` of every array             |
+| **Matrix multiplication order** | `A @ B ≠ B @ A`                     | Matrix multiplication is **not** commutative!    |
+
+> 📏 **Debug tip**: Sprinkle `print(tensor.shape)` throughout your code. Use it like a compass.
+
+---
+
+### 6. Strength-Building Exercises 💪
+
+#### 🔢 Manual Practice
+
+1. **Dot product by hand**
+
+   $$
+   \mathbf a = (2,\,-1,\,4), \qquad
+   \mathbf b = (1,\,0,\,3)
+   $$
+
+   $$
+   \mathbf a\!\cdot\!\mathbf b
+   = 2\!\cdot\!1 + (-1)\!\cdot\!0 + 4\!\cdot\!3
+   = 14
+   $$
+
+2. **Matrix–vector product**
+
+   Let
+
+   $$
+   A =
+   \begin{bmatrix}
+   1 & 2 \\
+   0 & -1 \\
+   3 & 4
+   \end{bmatrix},
+   \qquad
+   x =
+   \begin{bmatrix}
+   2 \\ 1
+   \end{bmatrix}
+   $$
+
+   Then
+
+   $$
+   Ax =
+   \begin{bmatrix}
+   1\!\cdot\!2 + 2\!\cdot\!1 \\
+   0\!\cdot\!2 + (-1)\!\cdot\!1 \\
+   3\!\cdot\!2 + 4\!\cdot\!1
+   \end{bmatrix}
+   =
+   \begin{bmatrix}
+   4 \\ -1 \\ 10
+   \end{bmatrix}
+   $$
+
+3. **Outer product demo**  
+   Try:
+   ```python
+   np.outer([1, 2], [3, 4])
+   ```
+   → Shape is `(2, 2)`  
+   Each element is the multiplication of row * column value.
+
+---
+
+#### 💻 Mini Coding Lab
+
+Write a NumPy function that simulates a single dense layer:
+
+```python
+def linear_layer(x, W, b):
+    return x @ W.T + b
+```
+
+Example usage:
+
+```python
+x = np.random.randn(5, 3)  # batch of 5 samples, 3 features each
+W = np.random.randn(4, 3)  # 4 output neurons
+b = np.random.randn(4)  # bias for each output
+y = linear_layer(x, W, b)
+
+print(y.shape)  # should be (5, 4)
+```
+
+---
+
+#### 🧪 Shape Shifter Drill
+
+- Convert `(3, 1)` into flat vector → `x.reshape(-1)`
+- Flatten a `(2, 3)` matrix → `x.flatten()`
+- Transpose a `(4, 5)` matrix → `x.T`
+
+Knowing how to reshape on the fly is your secret weapon.
+
+---
+
+#### ✍️ Reflect
+
+Write these down in your own words:
+
+- What happens when you multiply a matrix and vector in a neural net?
+- Why is shape-checking essential in NumPy?
+- Why is the dot product useful for comparing vectors?
+
+---
+
+### 7. TL;DR Cheatsheet 🧾
+
+Stick this near your laptop or desk while working on AI projects:
 
 ```
-y = [-2.2  4.9]
-similarity = 14.0
-outer shape = (3, 3)
+Scalar      = a single number         a.shape -> ()
+Vector      = 1-D array (list)        v.shape -> (n,)
+Matrix      = 2-D grid                A.shape -> (m, n)
+Tensor      = 3D+ block of numbers    T.shape -> (*dims)
+
+Dot         = np.dot(a, b)            # similarity (cos θ)
+MatVec      = A @ x                   # dense layer forward pass
+MatMat      = A @ B                   # combining transformations
+Transpose   = A.T                     # flip rows and cols
+Identity    = np.eye(n)               # do-nothing matrix
+Inverse     = np.linalg.inv(A)        # only square, invertible A
+Outer       = np.outer(a, b)          # full matrix from 2 vectors
 ```
 
-That’s **exactly** what happens in one dense neural-network layer:  
-*input vector* **x** → multiply by *weight matrix* **W** → output vector **y**.
+🛠️ Tools like PyTorch and TensorFlow also build on these ideas—NumPy is where you sharpen your skills.
 
 ---
 
-## 4. Story Time: A Matrix Is a Mini-Factory
+### 8. Wrap-Up: The LEGO Set Beneath Every Model
 
-Imagine ordering milkshakes at a drive-through.
+Let’s bring it back to where we started:
 
-1. **Input vector** **x** holds the flavours you want:  
-   `[chocolate=1, vanilla=0, strawberry=1]`.
+- **Scalar** = a tiny LEGO brick.
+- **Vector** = a row of bricks.
+- **Matrix** = a flat baseplate.
+- **Tensor** = a stack of baseplates (a cube!).
 
-2. Behind the counter sits a **matrix** **W**.  
-   Each **row** is a recipe: how much syrup, milk, ice to pour.
+Every neural network you’ll ever build is a carefully assembled LEGO structure:
 
-3. The server multiplies **W** by **x**.  
-   Out pops two cups—maybe a *large* and a *kid-size* (your **y**).
+- Inputs are stacked bricks (vectors).
+- Weights are baseplates (matrices).
+- Layers multiply and mix those bricks.
+- Biases nudge them.
+- Activations twist and squash them.
+- Loss tells you how “wrong” the structure is.
+- Gradients guide how to rebuild it.
 
-Change **W** (the recipes) and your drinks taste different.  
-Training a neural net is just the manager tweaking those recipe cards until customer 😊 goes up and refund 😢 goes down.
-
----
-
-## 5. Common “Gotchas” (and Easy Fixes)
-
-| Uh-oh                        | Symptom                               | Quick check |
-|------------------------------|---------------------------------------|-------------|
-| **Shape mismatch**           | `ValueError: shapes (2,3) and (4,)`  | Inner dims must line up (`(m, n)` × `(n,)`). |
-| **Row vs column confusion**  | Wrong output length                  | Use explicit `(n, 1)` for column vectors when in doubt. |
-| **Broadcasting surprises**   | Silent, fishy results                | NumPy auto-stretches; print `.shape` often. |
-
-💡 *Debug tip*: sprinkle `print(tensor.shape)` like breadcrumbs. If two shapes don’t match your mental picture, stop and fix.
+> Learn to play with these pieces and the rest of deep learning becomes **way** less mysterious.
 
 ---
 
-## 6. Mini-Cheatsheet (Stick on Your Monitor)
+### 🎯 What’s Next?
 
-```
-Vector      = 1-D list          x.shape -> (n,)
-Dot         = np.dot(a, b)      # similarity
-MatVec      = A @ x             # dense layer
-MatMat      = A @ B             # stack transforms
-Transpose   = A.T               # flip axes
-Identity    = np.eye(n)         # leave things unchanged
-```
+Here’s where your journey goes from basic algebra to true AI-building:
 
----
+| Topic                        | Why It Matters                                           |
+|------------------------------|----------------------------------------------------------|
+| **Probability & statistics** | Needed for Naïve Bayes, logistic regression, uncertainty |
+| **Calculus & gradients**     | How backpropagation works, train models                  |
+| **Optimization**             | SGD, Adam, how models actually learn                     |
+| **Information theory**       | Entropy, cross-entropy loss for classification           |
+| **Linear models**            | Logistic regression, SVMs, and interpretable models      |
+| **Neural networks**          | Put it all together—build end-to-end models              |
 
-## 7. Build Intuition, Not Fear
-
-- **Vector** → an *arrow* pointing somewhere.  
-- **Matrix** → a *machine* that rotates, stretches, or squashes arrows.  
-- **Tensor** → lots of machines working in parallel (think *mini-batch*).
-
-If a concept feels fuzzy, grab real objects:  
-draw arrows, rotate paper, stack sticky notes.  
-Concrete play beats rote memorisation every time.
+We'll cover these step-by-step. You’re building a mental toolkit for machine learning—**brick by brick**.
 
 ---
 
-## 8. Your Turn 🚀
+### 🎒 Final Exercises (Optional but Worth It)
 
-Try swapping different numbers in the demo, or:
-
-1. Create a random `(3, 3)` matrix and verify that `A @ np.eye(3) == A`.  
-2. Generate two random `(128,)` vectors and compute their cosine similarity (dot ÷ norms).  
-3. Make a tiny neural layer: weight matrix `(4, 3)`, bias `(4,)`, input `(3,)`. Compute `y = W @ x + b`.
-
-Each is five lines or less.
+1. Create a random `(3,3)` matrix `A` and confirm: `A @ np.eye(3) == A`
+2. Compute cosine similarity between two random vectors of shape `(128,)`
+3. Simulate a forward pass: `y = W @ x + b` for:
+    - `W.shape = (4, 3)`
+    - `x.shape = (3,)`
+    - `b.shape = (4,)`
 
 ---
 
-## Wrap-Up
+### 🚀 Closing Words
 
-Linear algebra is the tiny toolkit under every flashy AI headline.  
-**Scalars, vectors, matrices, tensors—and a small set of moves—are all you need to describe how models store, combine, and transform information.** Master these Lego bricks now, and the rest of the AI castle clicks together naturally.
+Linear algebra isn’t just background math—it’s the **language** your models speak.
 
-Next on the journey: probability, derivatives, and finally *building* full models.  
-But breathe—one box of bricks at a time. 🙌
+Every layer, every transformation, every prediction—it’s all just scalars, vectors, matrices, and tensors **moving in
+precise ways**.
 
-*Happy hacking, and may your matrix shapes always line up!*
+Learn these deeply, and everything else in AI starts making sense.
+
+Thanks for reading, and as always:
+
+**Happy hacking—and may your matrix shapes always line up!**
