--- a/_posts/2023-02-13-blog-post-3.md
+++ b/_posts/2023-02-13-blog-post-3.md
@@ -119,30 +119,78 @@ Picture a basket of **fruit**: apples and oranges. You want a *robot kid* to tel
 
 That’s a **Decision Tree**—nothing fancier than a flow‑chart of yes/no gates.
 
+
 ### 3·2  How Does the Tree Pick a “Good” Question?
 
 It chooses the question that makes the piles **cleaner**.
 
-We measure ‘clean‑ness’ (impurity) with a small formula called **entropy**. If a pile is half apples, half oranges, it
-is *messy* (entropy ≈ 1). If a pile is all apples, entropy is 0.
+We measure ‘clean-ness’ (or *messiness*) with a tiny formula called **entropy**. Think of entropy as the level of **confusion** in a pile:
 
-Here’s the math bite (skip if you like):
+- A pile that’s half apples, half oranges = **very messy** → entropy ≈ 1  
+- A pile that’s all apples = **super clean** → entropy = 0
+
+#### 🍎🍊 Real Talk: What’s This Formula?
+
+The formula is:
 
 $$
 H(S) = -\sum_{c} p_c \log_2 p_c,
 $$
 
-where $$ (p_c) $$ is the fraction of class *c* in set *S*.
+Where:
 
-**Information Gain** is the drop in entropy after a split:
+- **$$ ( S ) $$** = a group of fruits (a pile)
+- **$$ ( c ) $$** = each class (like 🍎 or 🍊)
+- **$$ ( p_c ) $$** = the **fraction of the pile that is class \( c \)**
+
+#### 🧮 Let’s Do It With Fruit
+
+Say your pile has **2 apples and 2 oranges**. That means:
+
+- $$ ( p_{\text{apple}} = 2/4 = 0.5 ) $$
+- $$ ( p_{\text{orange}} = 2/4 = 0.5 ) $$
+
+Plug it in:
 
 $$
-\text{Gain} = H(\text{parent}) - \bigl(\tfrac{|L|}{|S|}H(L) + \tfrac{|R|}{|S|}H(R)\bigr).
+H(S) = -[0.5 \log_2 0.5 + 0.5 \log_2 0.5] = -[0.5 \times (-1) + 0.5 \times (-1)] = 1.0
 $$
 
-The tree tries every question it can think of and picks the one with the **largest gain**.
+So this pile is **very messy**—totally mixed up.
 
-*(Don’t panic: Scikit‑Learn computes this for you.)*
+Now, suppose we ask **“Is the fruit orange-coloured?”** and split the fruits like this:
+
+- **Left pile** → both oranges → $$ ( p = 1.0 ) $$ → entropy = 0
+- **Right pile** → both apples → $$ ( p = 1.0 ) $$ → entropy = 0
+
+Boom! Now both piles are perfectly clean.
+
+---
+
+### 🔍 What’s *Information Gain*?
+
+Information Gain is just the **drop in entropy** when you split a pile:
+
+$$
+\text{Gain} = H(\text{parent}) - \left(\frac{|L|}{|S|}H(L) + \frac{|R|}{|S|}H(R)\right)
+$$
+
+- $$ (H(\text{parent})) $$ = entropy of the big pile before splitting  
+- $$ (H(L) \), \( H(R)) $$ = entropy of the left/right piles
+- $$ (\\|L\\|/\\|S\\| \), \( \\|R\\|/\\|S\\|) $$ = how big each new pile is, as a fraction
+
+In our example:
+
+- Before split: entropy = 1.0
+- After split: both piles = 0.0
+- So Gain = 1.0 – 0 = **1.0** ← **perfect!**
+
+---
+
+**Summary**:  
+The decision tree is basically playing “20 Questions,” trying to find the question that makes the biggest mess shrink. That’s what “Information Gain” measures.
+
+*(Don’t panic: Scikit‑Learn figures this all out for you automatically.)*
 
 ### 3·3  Hands‑On Example With Only Four Fruits
 
