linked notebook colab

--- a/_posts/2024-02-09-blog-post-12.md
+++ b/_posts/2024-02-09-blog-post-12.md
@@ -314,7 +314,7 @@ robots spend time *doing* rather than scratching their heads. Happy building, an
 
 Grab the notebook with Graphplan visuals, FF heat maps, and automatic problem generators:
 
-[Open the “Brains Behind the Bots” Colab](https://colab.research.google.com/drive/12AbCDefGhIJKlmNOPqRstUvwxYZ?usp=sharing)
+[Open the “Brains Behind the Bots” Colab](https://drive.google.com/file/d/14NDICgxNBSkmVy98RwzclZvofTFngQVO/view?usp=sharing)
 
 Clone it, plug in your own domains, and share what you find!
 
