--- a/notebook_posts/brains_behind_the_bots_post_12.ipynb
+++ b/notebook_posts/brains_behind_the_bots_post_12.ipynb
@@ -359,29 +359,109 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyperplan.heuristics.blind import h_blind\n",
-    "from pyperplan.heuristics.lmcut import h_lmcut\n",
-    "from pyperplan.heuristics.h_add import h_add\n",
+    "# --- Heuristic Shoot-out: hFF · hAdd · LM-cut (+ blind for scale) -----------\n",
+    "import heapq, importlib, pandas as pd\n",
+    "from pathlib import Path\n",
+    "from pyperplan.planner import HEURISTICS\n",
+    "from pyperplan.pddl.parser import Parser\n",
     "\n",
-    "heuristics = {\n",
-    "    \"blind\": h_blind,\n",
-    "    \"hadd\": h_add,\n",
-    "    \"lmcut\": h_lmcut,\n",
-    "    \"hff\": HEURISTICS[\"hff\"]\n",
-    "}\n",
+    "# 1 Pick whichever heuristics exist in this wheel\n",
+    "alias = {\"blind\":(\"blind\",),\n",
+    "         \"hadd\": (\"hadd\",\"h_add\",\"add\"),\n",
+    "         \"lmcut\":(\"lmcut\",),\n",
+    "         \"hff\":  (\"hff\",\"ff\")}\n",
+    "heuristics = {lbl: HEURISTICS[k]\n",
+    "              for lbl, keys in alias.items()\n",
+    "              for k in keys if k in HEURISTICS}\n",
+    "print(\"🧭 heuristics found →\", \", \".join(heuristics))\n",
     "\n",
-    "def solve_and_count(domain, problem, heuristic_fn):\n",
-    "    from pyperplan.search.best_first_search import best_first_search\n",
-    "    from pyperplan.task import read_task\n",
-    "    from pyperplan.heuristics.relaxation import FFHeuristic\n",
-    "    task = read_task(domain, problem)\n",
-    "    hfn = heuristic_fn(task)\n",
-    "    plan, stats = best_first_search(task, hfn)\n",
-    "    return stats[\"generated\"], stats[\"expanded\"], len(plan)\n",
+    "# 2 Load & ground a Task\n",
+    "def load_task(dom, prob):\n",
+    "    pa = Parser(dom, prob)\n",
+    "    dom = pa.parse_domain(); prob = pa.parse_problem(dom)\n",
+    "    for m in (\"pyperplan.grounding\",\n",
+    "              \"pyperplan.preprocess.grounding\"):\n",
+    "        try:\n",
+    "            ground = importlib.import_module(m).ground; break\n",
+    "        except (ImportError, AttributeError): pass\n",
+    "    else:\n",
+    "        raise ImportError(\"ground() not found in this pyperplan build\")\n",
+    "    return ground(prob)\n",
     "\n",
-    "for name, h in heuristics.items():\n",
-    "    gen, exp, length = solve_and_count(\"hanoi-domain.pddl\", \"hanoi-problem-5.pddl\", h)\n",
-    "    print(f\"{name:5s}  – generated {gen:6d} / expanded {exp:6d}  → plan {length:2d} steps\")\n"
+    "# 3 Compatibility helpers for operator API drift\n",
+    "def op_ok(op, s):\n",
+    "    if hasattr(op,\"is_applicable\"): return op.is_applicable(s)\n",
+    "    if hasattr(op,\"applicable\"):    return op.applicable(s)\n",
+    "    return op.preconditions <= s            # fallback\n",
+    "\n",
+    "def op_next(op, s):\n",
+    "    if hasattr(op,\"apply\"): return op.apply(s)\n",
+    "    if hasattr(op,\"apply_to\"): return op.apply_to(s)\n",
+    "    return op(s)\n",
+    "\n",
+    "# 4 Tiny A* with counters\n",
+    "# --- Tiny A* that the heuristics like (Node.state, not .s) ------------------\n",
+    "def astar_stats(task, Heuristic):\n",
+    "    class Node:\n",
+    "        __slots__ = (\"state\", \"g\", \"h\", \"parent\", \"action\")\n",
+    "        def __init__(self, state, g=0, parent=None, action=None):\n",
+    "            self.state  = state\n",
+    "            self.g      = g\n",
+    "            self.parent = parent\n",
+    "            self.action = action\n",
+    "            self.h      = 0            # filled later\n",
+    "\n",
+    "    h_fn = Heuristic(task)\n",
+    "    root = Node(task.initial_state)\n",
+    "    root.h = h_fn(root)\n",
+    "    open_hp = [(root.g + root.h, 0, root)]\n",
+    "    best_g  = {root.state: 0}\n",
+    "    generated = expanded = tie = 0\n",
+    "\n",
+    "    while open_hp:\n",
+    "        _, _, node = heapq.heappop(open_hp)\n",
+    "        expanded += 1\n",
+    "        if task.goal_reached(node.state):\n",
+    "            plan = []\n",
+    "            while node.parent is not None:\n",
+    "                plan.append(node.action)\n",
+    "                node = node.parent\n",
+    "            return len(plan), generated, expanded\n",
+    "\n",
+    "        for op in task.operators:\n",
+    "            if not op_ok(op, node.state):\n",
+    "                continue\n",
+    "            succ_state = op_next(op, node.state)\n",
+    "            g_succ = node.g + getattr(op, \"cost\", 1)\n",
+    "            if g_succ < best_g.get(succ_state, float(\"inf\")):\n",
+    "                best_g[succ_state] = g_succ\n",
+    "                tie += 1\n",
+    "                child = Node(succ_state, g_succ, node, op)\n",
+    "                child.h = h_fn(child)\n",
+    "                heapq.heappush(open_hp, (child.g + child.h, tie, child))\n",
+    "                generated += 1\n",
+    "    return None, generated, expanded        # unsolvable fallback\n",
+    "\n",
+    "\n",
+    "# 5 Ensure domain/problem files exist\n",
+    "if not Path(\"hanoi-domain.pddl\").exists():\n",
+    "    with open(\"hanoi-domain.pddl\",\"w\") as f: f.write(HANOI_DOMAIN)\n",
+    "if not Path(\"hanoi-problem-5.pddl\").exists():\n",
+    "    with open(\"hanoi-problem-5.pddl\",\"w\") as f: f.write(hanoi_problem_pddl(5))\n",
+    "task5 = load_task(\"hanoi-domain.pddl\",\"hanoi-problem-5.pddl\")\n",
+    "\n",
+    "# 6 Run and collect\n",
+    "rows=[]\n",
+    "for name,H in heuristics.items():\n",
+    "    steps,gen,exp = astar_stats(task5,H)\n",
+    "    rows.append(dict(heuristic=name,\n",
+    "                     generated=gen,\n",
+    "                     expanded=exp,\n",
+    "                     steps=steps))\n",
+    "    print(f\"{name:5s} – generated {gen:7d} / expanded {exp:7d} → plan {steps:2d} steps\")\n",
+    "\n",
+    "# 7 Pretty table\n",
+    "pd.DataFrame(rows).set_index(\"heuristic\")\n"
    ]
   },
   {
